# dr6plus_lenslike

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
base_config/: class_sz.yaml  evaluate_sampler.yaml  lcdm_param.yaml  lensing.yaml  mcmc_sampler.yaml
dr6plus_lenslike/: __init__.py  dr6plus_lenslike.py
dr6plus_lenslike/data/v1.0/: clkk_bandpowers_fiducial.txt  clkk_daytime_dddwS_daylens.txt  cov_clkk_daytime_daylens.txt  covmat_dr6+nightdaydeep.txt
runs/: act_lcdm.yaml  cobaya.sh  daytime_lcdm_wbao.yaml  dr6p_lcdm.yaml  evaluate.yaml
