[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dr6plus_lenslike"
version = "0.1.0"
authors = [
    {name = "Frank J Qu", email = "jq247@cantab.ac.uk"}
]
description = "Likelihood for the Atacama Cosmology Telescope DR6+ CMB lensing data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["cosmology", "cmb", "lensing", "likelihood", "act", "atacama"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "warnings",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
cobaya = [
    "cobaya>=3.0",
]
camb = [
    "camb>=1.3.0",
]


[project.urls]
Homepage = "https://github.com/frankjqu/dr6plus_lenslike"
Repository = "https://github.com/frankjqu/dr6plus_lenslike.git"
Issues = "https://github.com/frankjqu/dr6plus_lenslike/issues"
Documentation = "https://dr6plus-lenslike.readthedocs.io/"

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["dr6plus_lenslike*"]

[tool.setuptools.package-data]
dr6plus_lenslike = ["data/*", "*.txt", "*.dat"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
